# pksql

./: .gitignore  AGENTS.md  BUGS_AND_IMPROVEMENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pksql/: __init__.py  core.py  interactive.py  main.py
tests/: test_cli.py  test_core.py  test_interactive.py
